Fixed typo on code

--- a/Journal (Core Data)/Journal (Core Data)/Views/Base.lproj/Main.storyboard
+++ b/Journal (Core Data)/Journal (Core Data)/Views/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Begin filling in your notes here....." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4eM-Yt-hoS">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4eM-Yt-hoS">
                                                 <rect key="frame" x="0.0" y="29" width="374" height="206"/>
                                                 <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
