--- a/Journal (Core Data)/Journal (Core Data)/Views/Base.lproj/Main.storyboard
+++ b/Journal (Core Data)/Journal (Core Data)/Views/Base.lproj/Main.storyboard
@@ -92,15 +92,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="5ab-EA-gFl">
-                                <rect key="frame" x="20" y="108" width="374" height="284"/>
+                                <rect key="frame" x="20" y="108" width="374" height="330"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yd6-YU-Lhf">
                                         <rect key="frame" x="0.0" y="0.0" width="167" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xwu-oU-y29">
+                                        <rect key="frame" x="0.0" y="49" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😁"/>
+                                            <segment title="🥺"/>
+                                            <segment title="😐"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="SL2-6U-HpX">
-                                        <rect key="frame" x="0.0" y="49" width="374" height="235"/>
+                                        <rect key="frame" x="0.0" y="95" width="374" height="235"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zVc-uj-sGk">
                                                 <rect key="frame" x="0.0" y="0.0" width="33.5" height="17"/>
@@ -127,6 +135,9 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="xwu-oU-y29" secondAttribute="trailing" id="dfv-iG-2VY"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -152,6 +163,7 @@
                     <connections>
                         <outlet property="entryTextField" destination="4eM-Yt-hoS" id="DNT-ph-3gU"/>
                         <outlet property="entryTitleLabel" destination="Yd6-YU-Lhf" id="cUc-RU-iYP"/>
+                        <outlet property="segmentedControl" destination="xwu-oU-y29" id="Fsx-G0-VIq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
