--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -63,6 +63,7 @@
                                     <outlet property="dateLabel" destination="RzN-aq-mRh" id="irC-ow-CFB"/>
                                     <outlet property="descriptionLabel" destination="DZX-Ut-Ehi" id="QxD-o1-INV"/>
                                     <outlet property="titleLabel" destination="5Bb-SJ-fDj" id="g2A-QR-IKK"/>
+                                    <segue destination="5SS-l0-jaD" kind="show" identifier="EntryDetailShowSegue" id="PX7-FZ-86a"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -84,7 +85,81 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Saz-wt-jhR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="17.39130434782609" y="137.94642857142856"/>
+            <point key="canvasLocation" x="-13" y="-40"/>
+        </scene>
+        <!--Entry Details-->
+        <scene sceneID="NHA-bf-pSd">
+            <objects>
+                <viewController id="eua-mh-40B" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hRb-oa-ygm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="fua-B1-vPR">
+                                <rect key="frame" x="20" y="108" width="374" height="314.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yIl-8p-Swk">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="99.5"/>
+                                        <subviews>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7Ku-pL-duB">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                                <segments>
+                                                    <segment title="😀"/>
+                                                    <segment title="😐"/>
+                                                    <segment title="😞"/>
+                                                </segments>
+                                            </segmentedControl>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YrM-Us-Jjm">
+                                                <rect key="frame" x="0.0" y="39" width="374" height="22"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLO-wK-gwf">
+                                                <rect key="frame" x="0.0" y="69" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HI6-R8-yJS">
+                                                <rect key="frame" x="0.0" y="97.5" width="374" height="2"/>
+                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="mFg-Sj-d06"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="afi-al-Sbd">
+                                        <rect key="frame" x="0.0" y="114.5" width="374" height="200"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="323-zb-gv6"/>
+                                        </constraints>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="fua-B1-vPR" firstAttribute="leading" secondItem="goD-y6-b56" secondAttribute="leading" constant="20" id="JtF-fa-9oQ"/>
+                            <constraint firstItem="goD-y6-b56" firstAttribute="trailing" secondItem="fua-B1-vPR" secondAttribute="trailing" constant="20" id="LCZ-5S-oYB"/>
+                            <constraint firstItem="fua-B1-vPR" firstAttribute="top" secondItem="goD-y6-b56" secondAttribute="top" constant="20" id="O87-hB-g4x"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="goD-y6-b56"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="Qxw-vR-bBc"/>
+                    <connections>
+                        <outlet property="detailsTextView" destination="afi-al-Sbd" id="BD9-tv-4xh"/>
+                        <outlet property="moodSegmentedControl" destination="7Ku-pL-duB" id="iHs-Uq-IPR"/>
+                        <outlet property="titleTextField" destination="YrM-Us-Jjm" id="9qP-cP-X0B"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Io5-8b-31q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1790" y="-537"/>
         </scene>
         <!--Create Entry-->
         <scene sceneID="tne-QT-ifu">
@@ -208,6 +283,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3my-CC-LlJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--Journal Entry-->
+        <scene sceneID="J2h-hr-9Iu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5SS-l0-jaD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Journal Entry" id="tnx-r1-JgG"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nwp-0t-wYo">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="eua-mh-40B" kind="relationship" relationship="rootViewController" id="G7P-wI-LlE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aKE-SY-LNm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="-537"/>
         </scene>
     </scenes>
 </document>
